--- a/source/scss/_settings.scss
+++ b/source/scss/_settings.scss
@@ -1304,7 +1304,7 @@ $dark-blue: #147693;
 // $table-head-font-size: rem-calc(14);
 // $table-head-font-color: $jet;
 // $table-head-font-weight: $font-weight-bold;
-// $table-head-padding: rem-calc(8 10 10);
+ $table-head-padding: rem-calc(9 10);
 
 // These control the table foot styles
 // $table-foot-bg: $table-head-bg;
@@ -1320,7 +1320,7 @@ $dark-blue: #147693;
 // $table-caption-font-weight: bold;
 
 // These control the row padding and font styles
-// $table-row-padding: rem-calc(9 10);
+ $table-row-padding: rem-calc(9 10);
 // $table-row-font-size: rem-calc(14);
 // $table-row-font-color: $jet;
 // $table-line-height: rem-calc(18);
