--- a/source/scss/_settings.scss
+++ b/source/scss/_settings.scss
@@ -124,15 +124,15 @@ $light-orange: #e35a25;
 $orange: #ce4d28;
 $dark-orange: #c34528;
 $light-green: #eae34a;
-$light-blue: #1dacd6;
-$medium-blue: #0f9bd1;
-$dark-blue: #147693;
+$light-blue: #5A8CA7;//#1dacd6;
+$medium-blue: #38708F; //#0f9bd1;
+$dark-blue: #1F6083;//#147693;
 
 // We use these as default colors throughout
  $primary-color: $medium-blue;
  $secondary-color: $gainsboro;
  $alert-color: $orange;
- $success-color: #5bb75b;
+ $success-color: #399F68; //#5bb75b;
  $warning-color: $light-green;
  $info-color: $medium-blue;
 
