--- a/source/css/styleguide.css
+++ b/source/css/styleguide.css
@@ -1,239 +1,83 @@
-/*$button-border-width: 3px;*/
-/*$button-border-style: solid;*/
-/* line 3, ../scss/styleguide.scss */
-#change-view dd {
-  cursor: pointer;
-}
+/*
+Error: File to import not found or unreadable: foundation/functions.
+       Load paths:
+         /Users/zach/Desktop/WebDev/Projects/purpleline/source/scss
+         /Applications/CodeKit.app/Contents/Resources/engines/compass/compass-core/stylesheets
+         /Users/zach/Desktop/WebDev/Projects/purpleline/source/bower_components/foundation/scss
+         /Users/zach/Desktop/WebDev/Projects/purpleline/source/scss
+         Compass::SpriteImporter
+         Sass::Globbing::Importer
+        on line 62 of /Users/zach/Desktop/WebDev/Projects/purpleline/source/scss/_settings.scss
+        from line 1 of /Users/zach/Desktop/WebDev/Projects/purpleline/source/scss/styleguide.scss
 
-/* line 5, ../scss/styleguide.scss */
-#style-guide {
-  transition: width 0.8s;
-  width: auto;
-}
-/* line 8, ../scss/styleguide.scss */
-#style-guide.small-view {
-  width: 380px;
-}
-/* line 9, ../scss/styleguide.scss */
-#style-guide.medium-view {
-  width: 680px;
-}
-/* line 10, ../scss/styleguide.scss */
-#style-guide.large-view {
-  width: 1024px;
-}
-/* line 11, ../scss/styleguide.scss */
-#style-guide.auto-view {
-  width: auto;
-}
-/* line 12, ../scss/styleguide.scss */
-#style-guide .panel {
-  padding-bottom: 0;
-}
-/* line 13, ../scss/styleguide.scss */
-#style-guide section {
-  margin: 3.75rem 0;
-  clear: both;
-}
+57: }
+58: i.fa-link {
+59:     color: #ce4d28;
+60: }
+61: 
+62: label[for="code-snippet"] {
+63:     position: relative;
+64:     padding-left:25px;
+65:     margin-bottom:10px;
+66:     i {
+67:         font-size: 150%;
 
-/* line 16, ../scss/styleguide.scss */
-.side-nav {
-  background: #EEEEEE;
-  padding: 1.875rem;
-}
-
-/* line 18, ../scss/styleguide.scss */
-h6.label {
-  display: block;
-  margin-left: -20px;
-  margin-right: -20px;
-  text-align: left;
-  background-color: #eae34a;
-}
-
-/* line 26, ../scss/styleguide.scss */
-.panel {
-  background-color: #F9F9F9;
-  border-color: #EEEEEE;
-}
-
-/* line 27, ../scss/styleguide.scss */
-.panel.white {
-  background-color: #FFF;
-}
-
-/* line 28, ../scss/styleguide.scss */
-.panel > h6.label:first-child {
-  margin-top: -20px;
-}
-
-/* line 29, ../scss/styleguide.scss */
-.panel pre {
-  margin: -21px;
-}
-
-/* line 32, ../scss/styleguide.scss */
-.panel .paint-chip:last-child {
-  margin-bottom: 10px;
-}
-
-/* line 34, ../scss/styleguide.scss */
-.paint-chip {
-  width: 24.5%;
-  height: 160px;
-  display: inline-block;
-  position: relative;
-  margin: 10px 0;
-  border: 1px solid #EEEEEE;
-}
-/* line 42, ../scss/styleguide.scss */
-.paint-chip .color-deets {
-  padding: 0 5px;
-  text-align: right;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #EEEEEE;
-  border-top: 1px solid #DDDDDD;
-}
-/* line 51, ../scss/styleguide.scss */
-.paint-chip .color-deets p {
-  margin: 2px 0;
-  font-size: 0.75rem;
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
-}
-
-/* line 54, ../scss/styleguide.scss */
-.fa-external-link {
-  font-size: 70%;
-  vertical-align: super;
-}
-
-/* line 58, ../scss/styleguide.scss */
-i.fa-link {
-  color: #ce4d28;
-}
-
-/* line 62, ../scss/styleguide.scss */
-label[for="code-snippet"] {
-  position: relative;
-  padding-left: 25px;
-  margin-bottom: 10px;
-}
-/* line 66, ../scss/styleguide.scss */
-label[for="code-snippet"] i {
-  font-size: 150%;
-  position: absolute;
-  left: 0;
-  top: 2px;
-  /*font-size: 150%;*/
-  /*color: white;*/
-  /*background-color: $orange;*/
-  /*padding: 5px;*/
-}
-
-/* Tomorrow Night Theme */
-/* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
-/* Original theme - https://github.com/chriskempson/tomorrow-theme */
-/* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
-/* Tomorrow Comment */
-/* line 84, ../scss/styleguide.scss */
-.hljs-comment {
-  color: #969896;
-}
-
-/* Tomorrow Red */
-/* line 89, ../scss/styleguide.scss */
-.hljs-variable,
-.hljs-attribute,
-.hljs-tag,
-.hljs-regexp,
-.ruby .hljs-constant,
-.xml .hljs-tag .hljs-title,
-.xml .hljs-pi,
-.xml .hljs-doctype,
-.html .hljs-doctype,
-.css .hljs-id,
-.css .hljs-class,
-.css .hljs-pseudo {
-  color: #cc6666;
-}
-
-/* Tomorrow Orange */
-/* line 105, ../scss/styleguide.scss */
-.hljs-number,
-.hljs-preprocessor,
-.hljs-pragma,
-.hljs-built_in,
-.hljs-literal,
-.hljs-params,
-.hljs-constant {
-  color: #de935f;
-}
-
-/* Tomorrow Yellow */
-/* line 116, ../scss/styleguide.scss */
-.ruby .hljs-class .hljs-title,
-.css .hljs-rules .hljs-attribute {
-  color: #f0c674;
-}
-
-/* Tomorrow Green */
-/* line 122, ../scss/styleguide.scss */
-.hljs-string,
-.hljs-value,
-.hljs-inheritance,
-.hljs-header,
-.ruby .hljs-symbol,
-.xml .hljs-cdata {
-  color: #b5bd68;
-}
-
-/* Tomorrow Aqua */
-/* line 132, ../scss/styleguide.scss */
-.hljs-title,
-.css .hljs-hexcolor {
-  color: #8abeb7;
-}
-
-/* Tomorrow Blue */
-/* line 138, ../scss/styleguide.scss */
-.hljs-function,
-.python .hljs-decorator,
-.python .hljs-title,
-.ruby .hljs-function .hljs-title,
-.ruby .hljs-title .hljs-keyword,
-.perl .hljs-sub,
-.javascript .hljs-title,
-.coffeescript .hljs-title {
-  color: #81a2be;
-}
-
-/* Tomorrow Purple */
-/* line 150, ../scss/styleguide.scss */
-.hljs-keyword,
-.javascript .hljs-function {
-  color: #b294bb;
-}
-
-/* line 155, ../scss/styleguide.scss */
-.hljs {
-  display: block;
-  overflow-x: auto;
-  background: #1d1f21;
-  color: #c5c8c6;
-  padding: 0.5em;
-  -webkit-text-size-adjust: none;
-}
-
-/* line 164, ../scss/styleguide.scss */
-.coffeescript .javascript,
-.javascript .xml,
-.tex .hljs-formula,
-.xml .javascript,
-.xml .vbscript,
-.xml .css,
-.xml .hljs-cdata {
-  opacity: 0.5;
-}
+Backtrace:
+/Users/zach/Desktop/WebDev/Projects/purpleline/source/scss/_settings.scss:62
+/Users/zach/Desktop/WebDev/Projects/purpleline/source/scss/styleguide.scss:1
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/import_node.rb:67:in `rescue in import'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/import_node.rb:45:in `import'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:311:in `visit_import'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/stack.rb:79:in `block in with_base'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/stack.rb:115:in `with_frame'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/stack.rb:79:in `with_base'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:326:in `block (2 levels) in visit_import'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:326:in `map'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:326:in `block in visit_import'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/stack.rb:88:in `block in with_import'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/stack.rb:115:in `with_frame'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/stack.rb:88:in `with_import'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:323:in `visit_import'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/stack.rb:79:in `block in with_base'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/stack.rb:115:in `with_frame'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/stack.rb:79:in `with_base'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/base.rb:52:in `map'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:157:in `visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/tree/root_node.rb:20:in `render'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/engine.rb:278:in `render'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/plugin/compiler.rb:209:in `each'
+/Applications/CodeKit.app/Contents/Resources/engines/scss/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Applications/CodeKit.app/Contents/Resources/engines/compass/compass/lib/compass/sass_compiler.rb:40:in `compile!'
+/Applications/CodeKit.app/Contents/Resources/engines/compass/compass/lib/compass/commands/update_project.rb:49:in `perform'
+/Applications/CodeKit.app/Contents/Resources/engines/compass/compass/lib/compass/commands/base.rb:18:in `execute'
+/Applications/CodeKit.app/Contents/Resources/engines/compass/compass/lib/compass/commands/project_base.rb:19:in `execute'
+/Applications/CodeKit.app/Contents/Resources/engines/compass/compass/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
+/Applications/CodeKit.app/Contents/Resources/engines/compass/compass/lib/compass/exec/sub_command_ui.rb:15:in `run!'
+/Applications/CodeKit.app/Contents/Resources/engines/compass/compass/bin/compass:52:in `block in <main>'
+/Applications/CodeKit.app/Contents/Resources/engines/compass/compass/bin/compass:66:in `call'
+/Applications/CodeKit.app/Contents/Resources/engines/compass/compass/bin/compass:66:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: File to import not found or unreadable: foundation/functions.\A        Load paths:\A          /Users/zach/Desktop/WebDev/Projects/purpleline/source/scss\A          /Applications/CodeKit.app/Contents/Resources/engines/compass/compass-core/stylesheets\A          /Users/zach/Desktop/WebDev/Projects/purpleline/source/bower_components/foundation/scss\A          /Users/zach/Desktop/WebDev/Projects/purpleline/source/scss\A          Compass::SpriteImporter\A          Sass::Globbing::Importer\A         on line 62 of /Users/zach/Desktop/WebDev/Projects/purpleline/source/scss/_settings.scss\A         from line 1 of /Users/zach/Desktop/WebDev/Projects/purpleline/source/scss/styleguide.scss\A \A 57: }\A 58: i.fa-link {\A 59:     color: #ce4d28;\A 60: }\A 61: \A 62: label[for=\"code-snippet\"] {\A 63:     position: relative;\A 64:     padding-left:25px;\A 65:     margin-bottom:10px;\A 66:     i {\A 67:         font-size: 150%;"; }
